tests/compile/child_and_legacy_children_list.stderr
error: #[plexus_macros::child] methods cannot be combined with the legacy `children = [...]` activation attribute on the same impl; choose one. Remove `children = [...]` to migrate to the method-based syntax.
  --> tests/compile/child_and_legacy_children_list.rs:34:1
   |
34 | / impl Solar {
35 | |     #[plexus_macros::method]
36 | |     async fn ping(&self) -> impl Stream<Item = String> + Send + 'static {
37 | |         stream! { yield "pong".into(); }
...  |
44 | | }
   | |_^
